--- a/src/pages/Farms/index.html
+++ b/src/pages/Farms/index.html
@@ -9,6 +9,7 @@
     <link href="assets/css/farming_page.css" rel="stylesheet" />
 
     <!-- Latest compiled and minified CSS -->
+    <!-- Latest compiled and minified CSS -->
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
